--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#2196F3">
     <title>Финансовый трекер</title>
-    <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="/ppapp/manifest.webmanifest">
+    <link rel="stylesheet" href="/ppapp/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -37,6 +37,6 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/2.29.3/date_fns.min.js"></script>
-    <script src="app.js" type="module"></script>
+    <script src="/ppapp/app.js" type="module"></script>
 </body>
 </html>
