--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     </header>
 
     <main>
-        <section id="calendar-module" class="calendar-module">
-            <!-- Календарь будет сгенерирован здесь -->
-        </section>
+        <section id="calendar-module" class="calendar-module"></section>
         <div id="modal-root"></div>
         <div id="report-module" class="report-module" style="display: none;">
             <h2>Отчет за месяц</h2>
